# website

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  fly.toml  manage.py  pyproject.toml
.github/workflows/: docker.yml
buildher/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  entrypoint.sh  env.sample
nginx/: default.conf.template
website/: models.py
website/fixtures/: demo.json
website/migrations/: 0001_initial.py
website/static/: style.css
website/templates/: base.html  footer.html  header.html
website/templates/website/: post.html  section.html
