[tool.poetry]
name = "buildher"
version = "0.1.0"
description = ""
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"

[tool.poetry.group.production.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
