[tool.poetry]
name = "buildher"
version = "0.1.0"
description = ""
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
django-environ = "^0.11.2"
wagtail = "^5.2.2"
django-probes = "^1.7.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
whitenoise = "^6.6.0"

[tool.poetry.group.production.dependencies]
gunicorn = "^21.2.0"

[tool.black]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
